# AI-Model-AEGIS1

./: .editorconfig  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  PULL_REQUEST_TEMPLATE.md  README.md  REFACTORING_REPORT.md  SECURITY.md  aegis_core.py  api.py  api_models.py  cmep.md  cmep.py  cognitive_fallacy_library.py  cognitive_packet_generator.py  config.py  config_loader.py  data_integrity_protocol.py  data_structures.py  diagnostic_reporter.py  docker-compose.yml  google_search_synthesizer.py  humanistic_integration.md  isp_protocol.py  logger.py  main.py  noesis_triad.md  noesis_triad.py  praxis_triad.py  prometheus_iop.py  requirements.txt  semantic_embedding_model.py  state_manager.py  test_api.py  test_utils.py  universal_compiler.md  v_architect_sim.py  wgpmhi.md  (+1 more)
.continue/rules/: focus-on-pragmatic-progression.md  prioritize-ethical-reasoning.md  respect-user-sovereignty.md  strive-for-ethical-unification.md
aegis-tpce-ai/: requirements-dev.txt  requirements.txt
aegis-tpce-ai/src/cpp/: CMakeLists.txt
aegis-tpce-ai/src/cpp/src/: main.cpp
aegis-tpce-ai/src/python/data/: feature_engineering.py  sensor_data_loader.py
scripts/: build.bat  build_exe.py  run_build.bat  run_build_aegis.bat
